# inventory-tracker

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md  notes.txt  pyproject.toml
inventory/: api.py  auth.py  cli.py  db.py  models.py  search.py  service.py  web.py
inventory/templates/: alerts.html  base.html  index.html  orders.html  products.html  reorder.html  stock.html  stock_history.html
inventory_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_api.py  test_csv.py  test_service.py  test_web.py
