[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-tracker"
version = "0.1.0"
description = "Full-featured inventory management system with CLI, REST API, and web UI"
authors = [{name = "Asaf Livny", email = "asaflivny@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
inv = "inventory.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
